# VoidNovelEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RaycastEngine.sln
RaycastEngine/: CMakeLists.txt  RaycastEngine.exp  RaycastEngine.lib  RaycastEngine.vcxproj  RaycastEngine.vcxproj.filters  imgui.ini  main.cpp  main.lua  module.cpp  module.h  module_imgui.cpp  module_imgui.h  module_imgui_ext.cpp  module_imgui_ext.h  module_json.cpp  module_json.h  module_json_ext.cpp  module_json_ext.h  module_micro_pather.cpp  module_micro_pather.h  module_raylib.cpp  module_raylib.h  module_sdl.cpp  module_sdl.h  module_sdl_ext.cpp  module_sdl_ext.h  module_util.cpp  module_util.h  module_util_ext.cpp  module_util_ext.h  project.vne  resource.h
RaycastEngine/application/: application.lua
RaycastEngine/application/framework/: billboard.lua  blueprint.lua  branch_selector.lua  change.txt  color_helper.lua  evb_gen_template.lua  export_builder.lua  export_utils.lua  flow_manager.lua  font_wrapper.lua  game_object.lua  global_context.lua  imgui_helper.lua  log_manager.lua  math_ext.lua  modify_manager.lua  node_def.lua  node_factory.lua  pin_factory.lua  resources_manager.lua  scene.lua  scene_manager.lua  screen_manager.lua  settings_manager.lua  shader_wrapper.lua  style.lua  text_wrapper.lua  timer.lua  tween.lua  undo_manager.lua  video_decoder.lua
RaycastEngine/application/resources/: 素材声明.md
RaycastEngine/application/scene/: scene_editor.lua  scene_released.lua  scene_test.lua
RaycastEngine/application/scene/window/: window_assets.lua  window_blueprint.lua  window_console.lua  window_designer.lua  window_exporter.lua  window_flow_designer.lua  window_monitor.lua  window_preview.lua  window_settings.lua  window_style_designer.lua  window_ui_designer.lua
cmake/: module.cmake
doc/: VNEguide.md  sponsor.md
doc/img/: sponsor.md
doc/latest_doc/: EnigmaInstallGuide.md  FFmpegInstallGuide.md  VNEguide.md
doc/old_version_doc/: list.md
doc/old_version_doc/0.1.0-dev.1/: VNEguide.md
doc/old_version_doc/0.1.0-dev.1-PEG/: VNE_ProjectExampleGuide.md
